finish framework section

--- a/ntbk/lctr/03_ml_ds_framework.ipynb
+++ b/ntbk/lctr/03_ml_ds_framework.ipynb
@@ -61,12 +61,28 @@
     "\n",
     "## 5. Modeling \n",
     "\n",
+    "Three parts:\n",
+    "1. Choosing and training a model (training)\n",
+    "2. Tuning the model (validation data)\n",
+    "3. Compare the model with others you've tried (test set)\n",
+    "    * watch out for under- and overfitting ... you want generality\n",
+    "\n",
     "Based on our problem and data, what model should we use?\n",
     "\n",
     "An important note ... during our experiments we'll split our data into three sets:\n",
-    "* training data (train the model on this)\n",
-    "* validation data (tune the model on this)\n",
-    "* test data (test and compare on this)\n"
+    "* training data ... 70% - 80% (train the model on this)\n",
+    "* validation data ... 10% - 15% (tune the model on this)\n",
+    "* test data ... 10% - 15% (test and compare on this)\n",
+    "\n",
+    "Choose a model and train it on training data.\n",
+    "\n",
+    "One goal you want to have during experimentation is to minimize the time between experiments. So if your training data is vast enough to make training take hours, start with a subset of the training data for faster experimentation.\n",
+    "\n",
+    "When selecting a model for production, consider not only accuracy, but also training time and time to make a prediction on new data.\n",
+    "\n",
+    "Poor performance on training data means underfitting. Try a different model, improve the existing one, or collect more data.\n",
+    "\n",
+    "Great performance on training data, but poor performance on test data mean overfitting and poor generalization. Try using a simpler model, or make sure your test data is well represented in the training data. You don't want a difference in what you've trained your data on and what data the model will encounter in production.\n"
    ]
   }
  ],
